report nearly finished

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -141,3 +141,9 @@
   pages     = {404--415},
   year      = {2016}
 }
+
+@online{sentence-transformer-model,
+	title = {HuggingFace all-MiniLM-L6-v2},
+	url = {https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2},
+	update = {2023-07-02}
+}
