first paper draft

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -153,3 +153,12 @@
 	url = {https://www.deepl.com/translator},
 	update = {2023-07-02}
 }
+
+@inproceedings{koppen2000curse,
+	title={The curse of dimensionality},
+	author={K{\"o}ppen, Mario},
+	booktitle={5th online world conference on soft computing in industrial applications (WSC5)},
+	volume={1},
+	pages={4--8},
+	year={2000}
+}
