--- a/report/report.tex
+++ b/report/report.tex
@@ -177,7 +177,7 @@ Our user-interface offers a dedicated tab for location recommendations. In figur
 \end{figure}
 
 \section{Experiments}
-To build our dataset of company descriptions, we manually extracted the descriptions of $50$ of the largest companies in Saarland. When a description was only available in German, we translated it to English using the online translator DeepL. A list of all companies in our dataset can be found in the appendix \ref{sec:appendix-companies}.
+To build our dataset of company descriptions, we manually extracted the descriptions of $50$ of the largest companies in Saarland. When a description was only available in German, we translated it to English using the online translator DeepL~\cite{deepl}. A list of all companies in our dataset can be found in the appendix \ref{sec:appendix-companies}.
 
 For the purpose of the experimental evaluation we conducted the data collection manually. As our target region was very narrow this was easily feasible. However, in the future we might create a simple HTML scraper to scale our approach to larger regions. To test our location recommendation feature, we created company descriptions using GPT-4 \cite{chatgpt}.
 
