--- a/report/figure.tex
+++ b/report/figure.tex
@@ -31,7 +31,7 @@
         \node at (0, 0.5) {K-Means or Agglomerative clustering};
         \draw[thick, -stealth] (0, 0) -- (0, -0.5); 
 
-        \node[font=\bfseries] at (0, -0.75) {Market Segments};
+        \node[font=\bfseries] at (0, -0.75) {Identify Market Segments};
     \end{tikzpicture}
     \caption{Overview of our clustering pipeline.}
     \label{fig:pipeline}
